Minor updates to colors of footer links Reduced size of first MM game images Fixed issue with background bleed on highlights

--- a/assets/css/mmsite.scss
+++ b/assets/css/mmsite.scss
@@ -79,6 +79,24 @@ a {
   }
 }
 
+a.footer-link {
+  &:link {
+    color: #A57E54;
+  }
+
+  &:visited {
+    color: #A57E54;
+  }
+
+  &:hover {
+    color: #A57E54;
+  }
+
+  &:active {
+    color: #A57E54;
+  }
+}
+
 /* Make the navbar semi-transparent */
 .navbar.transparent {
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75));
