--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -4,6 +4,11 @@
   color: #faf6e4;
   background-color: #122b3b;
 }
+
+div.highlight {
+  background-color: inherit;
+}
+
 .highlight .gl {
   color: #dee5e7;
   background-color: #4e5d62;
